[gd_scene load_steps=34 format=3 uid="uid://joftfnjevnaw"]

[ext_resource type="Script" uid="uid://7kb3pbpspfwx" path="res://Scene/ui.gd" id="1_wyf2n"]
[ext_resource type="Shader" uid="uid://bjvr3508fd2pt" path="res://shaders/UI_Background.gdshader" id="2_upsqf"]
[ext_resource type="Theme" uid="uid://di26pe0q2igaf" path="res://theme/normal.tres" id="3_c3gqb"]
[ext_resource type="Script" uid="uid://7pmj4o35j3rg" path="res://Scene/pop_up.gd" id="4_rsjck"]
[ext_resource type="Script" uid="uid://cpfoeaof6marp" path="res://Scene/buy.gd" id="4_upsqf"]
[ext_resource type="Texture2D" uid="uid://bpadedvi8g31x" path="res://pictures/popup.png" id="5_oa88o"]
[ext_resource type="AudioStream" uid="uid://75doydoseev7" path="res://music/buy.ogg" id="7_c3gqb"]
[ext_resource type="AudioStream" uid="uid://bpfy48h0m3kun" path="res://music/start_game.ogg" id="8_rsjck"]
[ext_resource type="AudioStream" uid="uid://xon4fsi2eu5i" path="res://music/shopClose.ogg" id="9_oa88o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kxwlj"]
shader = ExtResource("2_upsqf")

[sub_resource type="Gradient" id="Gradient_mjq44"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(3.27289e-06, 0.778034, 0.992334, 1, 0.50193, 0.591127, 0.999997, 1, 0.946054, 0.654596, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jo56e"]
gradient = SubResource("Gradient_mjq44")

[sub_resource type="InputEventKey" id="InputEventKey_ls17r"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_thkpk"]
events = [SubResource("InputEventKey_ls17r")]

[sub_resource type="InputEventKey" id="InputEventKey_wyf2n"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_upsqf"]
events = [SubResource("InputEventKey_wyf2n")]

[sub_resource type="InputEventKey" id="InputEventKey_rsjck"]
device = -1
keycode = 66
unicode = 98

[sub_resource type="Shortcut" id="Shortcut_oa88o"]
events = [SubResource("InputEventKey_rsjck")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wyf2n"]
bg_color = Color(0.388235, 0.483824, 1, 0.894118)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="InputEventKey" id="InputEventKey_cj5hc"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_bue5t"]
events = [SubResource("InputEventKey_cj5hc")]

[sub_resource type="InputEventKey" id="InputEventKey_e6i2a"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_khe1d"]
events = [SubResource("InputEventKey_e6i2a")]

[sub_resource type="InputEventKey" id="InputEventKey_bue5t"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_e6i2a"]
events = [SubResource("InputEventKey_bue5t")]

[sub_resource type="InputEventKey" id="InputEventKey_khe1d"]
device = -1
keycode = 52
unicode = 52

[sub_resource type="Shortcut" id="Shortcut_yldp3"]
events = [SubResource("InputEventKey_khe1d")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_upsqf"]
bg_color = Color(0, 1, 1, 0.678431)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_ls17r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_urowa"]
resource_name = "pop"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_thkpk"]
_data = {
&"RESET": SubResource("Animation_ls17r"),
&"pop": SubResource("Animation_urowa")
}

[sub_resource type="InputEventKey" id="InputEventKey_oa88o"]
device = -1
keycode = 71
unicode = 103

[sub_resource type="Shortcut" id="Shortcut_cj5hc"]
events = [SubResource("InputEventKey_oa88o")]

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wyf2n")

[node name="background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_kxwlj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_jo56e")

[node name="start_game" type="Button" parent="."]
layout_mode = 0
offset_left = 453.0
offset_top = 522.0
offset_right = 723.0
offset_bottom = 609.0
theme = ExtResource("3_c3gqb")
shortcut = SubResource("Shortcut_thkpk")
text = "开始游戏"

[node name="exit_game" type="Button" parent="."]
layout_mode = 0
offset_left = 453.0
offset_top = 301.0
offset_right = 723.0
offset_bottom = 388.0
theme = ExtResource("3_c3gqb")
shortcut = SubResource("Shortcut_upsqf")
text = "退出游戏"

[node name="title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 20.0
offset_right = 1152.0
offset_bottom = 247.0
theme_override_colors/default_color = Color(0.597245, 0.882637, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.258824)
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/normal_font_size = 181
bbcode_enabled = true
text = "[wave amp=50.0 frep=8.0 connected = 0]几何之争[wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tip" type="Label" parent="."]
layout_mode = 0
offset_top = 431.0
offset_right = 466.0
offset_bottom = 638.0
theme_override_colors/font_color = Color(0.585746, 0.969931, 1, 1)
text = " 1.Enter键直接进入游戏
 2.Esc键退出游戏
 3.鼠标悬停按钮上
   就可查看对应快
   捷键"

[node name="coin" type="Label" parent="."]
layout_mode = 0
offset_top = -5.0
offset_right = 637.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(0.935303, 1, 0.171875, 1)
theme_override_colors/font_shadow_color = Color(0.324, 0.352, 0, 0.818)
theme_override_font_sizes/font_size = 45
text = "金币：0"
vertical_alignment = 1

[node name="buy" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.393
anchor_top = 0.636
anchor_right = 0.628
anchor_bottom = 0.77
offset_left = 0.263977
offset_top = -0.128021
offset_right = -0.456055
offset_bottom = 0.039978
shortcut = SubResource("Shortcut_oa88o")
text = "游戏商店"

[node name="background" type="Panel" parent="buy"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -342.0
offset_top = -355.5
offset_right = 348.0
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wyf2n")
script = ExtResource("4_upsqf")

[node name="title" type="Label" parent="buy/background"]
layout_mode = 0
offset_right = 690.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0, 1, 0.15625, 1)
theme_override_font_sizes/font_size = 46
text = "购买"
horizontal_alignment = 1
vertical_alignment = 1

[node name="damage_up" type="Button" parent="buy/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.293
anchor_top = -1.868
anchor_right = -0.293
anchor_bottom = -1.868
offset_left = 251.17
offset_top = 897.405
offset_right = 409.17
offset_bottom = 962.405
theme_override_font_sizes/font_size = 31
shortcut = SubResource("Shortcut_bue5t")
text = "增加攻击力"

[node name="damage" type="Label" parent="buy/background/damage_up"]
layout_mode = 0
offset_left = 171.0
offset_right = 641.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.475)
text = "当前攻击力：1"
vertical_alignment = 1

[node name="blood_up" type="Button" parent="buy/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.293
anchor_top = -0.902
anchor_right = -0.293
anchor_bottom = -0.902
offset_left = 251.17
offset_top = 544.365
offset_right = 409.17
offset_bottom = 609.365
theme_override_font_sizes/font_size = 31
shortcut = SubResource("Shortcut_khe1d")
text = "增加血量"

[node name="blood" type="Label" parent="buy/background/blood_up"]
layout_mode = 0
offset_left = 171.0
offset_right = 641.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0, 128.498, 0.133333, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.419608)
text = "当前血量：20"
vertical_alignment = 1

[node name="buy_way_1" type="Button" parent="buy/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.293
anchor_top = -0.902
anchor_right = -0.293
anchor_bottom = -0.902
offset_left = 251.17
offset_top = 617.365
offset_right = 409.17
offset_bottom = 682.365
theme_override_font_sizes/font_size = 31
shortcut = SubResource("Shortcut_e6i2a")
text = "购买“毁灭”"

[node name="num" type="Label" parent="buy/background/buy_way_1"]
layout_mode = 0
offset_left = 171.0
offset_right = 641.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0.609375, 0.981689, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.419608)
text = "道具数量：0"
vertical_alignment = 1

[node name="buy_way_2" type="Button" parent="buy/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.293
anchor_top = -0.902
anchor_right = -0.293
anchor_bottom = -0.902
offset_left = 251.17
offset_top = 692.365
offset_right = 409.17
offset_bottom = 757.365
theme_override_font_sizes/font_size = 25
shortcut = SubResource("Shortcut_yldp3")
text = "购买“几何之力”"

[node name="num" type="Label" parent="buy/background/buy_way_2"]
layout_mode = 0
offset_left = 171.0
offset_right = 641.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0.609375, 0.981689, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.419608)
text = "道具数量：0"
vertical_alignment = 1

[node name="spend" type="Label" parent="buy/background"]
layout_mode = 0
offset_top = 327.485
offset_right = 688.0
offset_bottom = 414.485
theme_override_colors/font_color = Color(0.859375, 0.859375, 0.859375, 1)
text = "注：升级每次花费100金币"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spend2" type="Label" parent="buy/background"]
layout_mode = 0
offset_left = 184.0
offset_top = 399.485
offset_right = 511.0
offset_bottom = 480.485
theme_override_colors/font_color = Color(0.859375, 0.859375, 0.859375, 1)
text = "购买道具每次花费150金币
"

[node name="close" type="Button" parent="buy/background"]
layout_mode = 0
offset_left = 633.0
offset_right = 688.0
offset_bottom = 62.0
text = "x"
flat = true

[node name="can\'t_buy" type="Label" parent="buy/background"]
visible = false
layout_mode = 0
offset_left = 139.0
offset_top = 147.0
offset_right = 569.0
offset_bottom = 266.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 86
theme_override_styles/normal = SubResource("StyleBoxFlat_upsqf")
text = "金币不够哦~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PopUP" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.252
anchor_top = 0.073
anchor_right = 0.712
anchor_bottom = 0.929
offset_left = -0.304016
offset_top = -0.304005
offset_right = -0.223999
offset_bottom = 0.00799561
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(265, 277)
script = ExtResource("4_rsjck")
metadata/_edit_group_ = true

[node name="background" type="TextureRect" parent="PopUP"]
modulate = Color(0.388235, 0.709804, 1, 0.894118)
layout_mode = 0
offset_right = 530.0
offset_bottom = 470.0
texture = ExtResource("5_oa88o")

[node name="title" type="Label" parent="PopUP"]
layout_mode = 0
offset_left = 77.0
offset_top = 129.0
offset_right = 519.0
offset_bottom = 179.0
theme_override_font_sizes/font_size = 31
text = "退出"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text" type="Label" parent="PopUP"]
layout_mode = 0
offset_left = 46.0
offset_top = 214.0
offset_right = 490.0
offset_bottom = 278.0
theme_override_colors/font_color = Color(0.368028, 0.528972, 0.937519, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.398)
text = "确定退出游戏，不再玩一会儿吗？"
horizontal_alignment = 1
vertical_alignment = 1

[node name="yes" type="Button" parent="PopUP"]
layout_mode = 0
offset_left = 107.0
offset_top = 313.0
offset_right = 219.0
offset_bottom = 354.0
theme_override_font_sizes/font_size = 26
text = "确定"

[node name="no" type="Button" parent="PopUP"]
layout_mode = 0
offset_left = 278.0
offset_top = 313.0
offset_right = 390.0
offset_bottom = 354.0
theme_override_font_sizes/font_size = 26
text = "取消"

[node name="AnimationPlayer" type="AnimationPlayer" parent="PopUP"]
libraries = {
&"": SubResource("AnimationLibrary_thkpk")
}

[node name="get_con" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 74.0
offset_right = 197.0
offset_bottom = 158.0
theme_override_font_sizes/font_size = 38
shortcut = SubResource("Shortcut_cj5hc")
text = "答题得金币！"

[node name="about" type="Button" parent="."]
layout_mode = 0
offset_top = 166.0
offset_right = 196.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 38
shortcut = SubResource("Shortcut_cj5hc")
text = "游戏说明"

[node name="buy2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_c3gqb")

[node name="start_game2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_rsjck")

[node name="shopClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_oa88o")

[connection signal="pressed" from="about" to="." method="_on_about_pressed"]
